--- a/user-interface/src/main/resources/messages.properties
+++ b/user-interface/src/main/resources/messages.properties
@@ -12,3 +12,4 @@ NO_SPECIMEN_DEFINED=No specimens were defined -> At least one specimen has to be
 NO_ANALYTE_DEFINED=No analytes were defined -> At least one analyte has to be selected during project creation
 DATA_ATTACHED_TO_SAMPLES=Samples could not be deleted -> At least one of the samples has data attached.
 SERVICE_FAILED=A service failed -> Unfortunately a service failed, please try again later or feel free to contact us at support@qbic.zendesk.com if the issue persists.
+UNKNOWN_METADATA=Unknown metadata type -> Please make sure that all property names are provided.
